; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/dnsapi/dnsapi/extr_query.c_DnsCToW.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/dnsapi/dnsapi/extr_query.c_DnsCToW.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_ACP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @DnsCToW to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @DnsCToW(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %6 = load i32, i32* @CP_ACP, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @MultiByteToWideChar(i32 %6, i32 0, i32* %7, i32 -1, i32* null, i32 0)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp eq i32 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %29

12:                                               ; preds = %1
  %13 = call i32 (...) @RtlGetProcessHeap()
  %14 = load i32, i32* %5, align 4
  %15 = sext i32 %14 to i64
  %16 = mul i64 %15, 4
  %17 = trunc i64 %16 to i32
  %18 = call i32* @RtlAllocateHeap(i32 %13, i32 0, i32 %17)
  store i32* %18, i32** %4, align 8
  %19 = load i32*, i32** %4, align 8
  %20 = icmp eq i32* %19, null
  br i1 %20, label %21, label %22

21:                                               ; preds = %12
  store i32* null, i32** %2, align 8
  br label %29

22:                                               ; preds = %12
  %23 = load i32, i32* @CP_ACP, align 4
  %24 = load i32*, i32** %3, align 8
  %25 = load i32*, i32** %4, align 8
  %26 = load i32, i32* %5, align 4
  %27 = call i32 @MultiByteToWideChar(i32 %23, i32 0, i32* %24, i32 -1, i32* %25, i32 %26)
  %28 = load i32*, i32** %4, align 8
  store i32* %28, i32** %2, align 8
  br label %29

29:                                               ; preds = %22, %21, %11
  %30 = load i32*, i32** %2, align 8
  ret i32* %30
}

declare dso_local i32 @MultiByteToWideChar(i32, i32, i32*, i32, i32*, i32) #1

declare dso_local i32* @RtlAllocateHeap(i32, i32, i32) #1

declare dso_local i32 @RtlGetProcessHeap(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
